# one_app_challenge

./: .gitignore  README.md
first_app/: README.md  app.py  pyproject.toml
first_app/app/: main.py  sushida.py
first_app/app/src/: drawer.py  pose_estimator.py  video_capture.py
first_app/app/utils/: logger.py
second_app/: gesture.py  volume_demo.ipynb
second_app/assets/: links.md
