[project]
name = "first_app"
version = "0.1.0"
description = "an env for first app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.20",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pytest>=8.3.4",
]
